# freepark

./: .gitignore  README.md
!training/: HoughDetector_training_guide.txt  TensorFlow_training_guide.txt  take_cam_screenshots.au3
!training/haar/: cascade_homeApr2017.xml  createsamples.sh  gen_pos.sh  mkgray.sh  traincascade.sh
!training/my_hough_forest/: HoughDetectorPreTrainingImagesConvertor.sh  generate_train_pos_file.sh
!training/my_hough_forest/homeApr2017/: config.txt
!training/my_hough_forest/yarnetJan2017/: config.txt
!training/tensorflow/: create_tf_record.py  cut_prefix_dir.sh  fit_bboxes_into_wh.sh  images_list_processing.txt  remove_duplicate_strings.sh  remove_false_positives.sh  run_create_tf_record.sh  run_cropper.sh  run_tensorflow_training.sh
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
backend/: freepark_nginx.conf  freepark_uwsgi.ini  requirements.txt  uwsgi_params
backend/backend/: settings.py  urls.py
backend/rest_api/: base64_image_field.py  geo_coordinate_point.py  models.py  park_searcher.py  permissions.py  serializers.py  urls.py  views.py
backend/rest_api/migrations/: 0001_initial.py  0002_freeparkingplace_image.py  0003_auto_20190113_1218.py
detector/: CMakeLists.txt  README
detector/!old/: CMakeLists.txt  README
detector/!old/CannyDetector/: CMakeLists.txt  CannyApplier.cpp  CannyApplier.h  CannyWindow.cpp  CannyWindow.h  ImageWindow.cpp  ImageWindow.h  main.cpp
detector/!old/HaarDetector/: CMakeLists.txt  main.cpp
detector/!old/HoughDetector/: CMakeLists.txt  config_bottom.txt  config_middle.txt  config_top_vertical.txt
detector/!old/HoughDetector.lib/: CMakeLists.txt  config_sample.txt  detection_images.txt  train_neg.txt  train_pos.txt
detector/!old/HoughDetector.lib/inc/: DetectOptions.h  DetectOptionsLoader.h  HDDetector.h  HDLibLog.h  HDTrainer.h  HoughForest.h  HoughForestOptions.h  HoughForestOptionsLoader.h  HoughForestOptionsSetter.h  HoughLeaf.h  HoughNode.h  HoughTree.h  HoughTreeTrainer.h  ImagePatch.h  PatchStorage.h  TrainImageInfo.h  TrainOptions.h  TrainOptionsLoader.h  Utils.h
detector/!old/HoughDetector.lib/pub/: HDDetectedObject.h  HDDetectedObjects.h  HDException.h  HDExport.h  HDLog.h  IHDDetector.h  IHDTrainer.h
detector/!old/HoughDetector.lib/src/: DetectOptions.cpp  DetectOptionsLoader.cpp  HDDetector.cpp  HDLibLog.cpp  HDTrainer.cpp  HoughForest.cpp  HoughForestOptionsLoader.cpp  HoughLeaf.cpp  HoughNode.cpp  HoughTree.cpp  HoughTreeTrainer.cpp  PatchStorage.cpp  TrainOptions.cpp  TrainOptionsLoader.cpp  Utils.cpp
detector/!old/HoughDetector/inc/: HDApp.h  HDAppLog.h
detector/!old/HoughDetector/src/: HDApp.cpp  main.cpp
detector/!old/HoughForest/: CMakeLists.txt  CRForest-Detector.cpp  CRForestDetector.cpp  CRPatch.cpp  CRPatch.h  CRTree.cpp  CRTree.h  config.txt  config_my.txt  config_scaled.txt
detector/!old/HoughForest/trees_uiuc_cars/: treetable000.txt  treetable001.txt  treetable002.txt  treetable003.txt  treetable004.txt  treetable005.txt  treetable006.txt  treetable007.txt  treetable008.txt  treetable009.txt
detector/AI4AllDetector/: CMakeLists.txt
detector/AI4AllDetector/inc/: AI4AllDetector.h  AI4AllDetectorApp.h  AI4AllDetectorException.h  AI4AllDetectorLog.h  NotificationType.h  ServerCommunicator.h  SubmitCameraItem.h
detector/AI4AllDetector/src/: AI4AllDetector.cpp  AI4AllDetectorApp.cpp  ServerCommunicator.cpp  main.cpp
detector/CarDetector/: CMakeLists.txt  TakeScreenshotsForCarDetector.au3  camera_msk_dolgoprudny_nb5.txt  camera_msk_dolgoprudny_nb5_winter.txt  camera_nsk_academpark210.txt  camera_nsk_mirgorod_2d3d.txt  camera_nsk_mirgorod_3dbudka.txt  camera_nsk_mirgorod_3dlvu.txt  camera_nsk_mirgorodskaya5.txt  camera_yaroslavl_rio.txt  multi_config_sample.txt  run_tests.sh
detector/CarDetector/inc/: CameraOptions.h  CarDetector.h  CarDetectorApp.h  CarDetectorException.h  CarDetectorLog.h  GeoCoordinatePoint.h  MathUtils.h  Parking.h  ParkingOptions.h  ParkingPlace.h
detector/CarDetector/src/: CameraOptions.cpp  CarDetector.cpp  CarDetectorApp.cpp  GeoCoordinatePoint.cpp  MathUtils.cpp  Parking.cpp  ParkingOptions.cpp  main.cpp
detector/CarDetector/tests/: dolgoprudny1.test  dolgoprudny2.test  dolgoprudny3.test  dolgoprudny4.test  dolgoprudny5.test  mirgorod_2d3d1.test  mirgorod_2d3d2.test  mirgorod_2d3d3.test  mirgorod_3dbudka1.test  mirgorod_3dlvu1.test  mirgorod_3dlvu2.test  mirgorod_3dlvu3.test  mirgorod_3dlvu4.test  mirgorod_3dlvu5.test  mirgorod_3dlvu6_diagonal.test  mirgorod_3dlvu7_along.test  mirgorod_3dlvu8.test  mirgorod_own1.test  mirgorod_own2.test  mirgorod_own3.test  mirgorod_own4.test
detector/CarDetector/tests/expected/: dolgoprudny1.out  dolgoprudny2.out  dolgoprudny3.out  dolgoprudny4.out  dolgoprudny5.out  mirgorod_2d3d1.out  mirgorod_2d3d2.out  mirgorod_2d3d3.out  mirgorod_3dbudka1.out  mirgorod_3dlvu1.out  mirgorod_3dlvu2.out  mirgorod_3dlvu3.out  mirgorod_3dlvu4.out  mirgorod_3dlvu5.out  mirgorod_3dlvu6_diagonal.out  mirgorod_3dlvu7_along.out  mirgorod_3dlvu8.out  mirgorod_own1.out  mirgorod_own2.out  mirgorod_own3.out  mirgorod_own4.out
detector/TakeScreenshots/: CMakeLists.txt
detector/TakeScreenshots/src/: TakeScreenshots.cpp
detector/TensorFlowDetector/: CMakeLists.txt
detector/TensorFlowDetector.lib/: CMakeLists.txt
detector/TensorFlowDetector.lib/inc/: AutoDeleteWrapper.h  TFDetector.h
detector/TensorFlowDetector.lib/pub/: ITFDetector.h  TFDetectedObject.h  TFDetectedObjects.h  TFException.h  TFExport.h
detector/TensorFlowDetector.lib/src/: TFDetector.cpp
detector/TensorFlowDetector/inc/: TFApp.h
detector/TensorFlowDetector/src/: TFApp.cpp  main.cpp
detector/TrainImageCropper/: CMakeLists.txt  msk_dolgoprudny_nb5.txt  nsk_mirgorodskaya5.txt
detector/TrainImageCropper/inc/: ParkingRectangle.h  Parkings.h
detector/TrainImageCropper/src/: Parkings.cpp  cropper.cpp
detector/cmake/: ConnectBase64.cmake  ConnectEasyLogging.cmake  ConnectOpenCVLibs.cmake  ConnectTensorFlowLibs.cmake  ConnectTgBotLibs.cmake  ConnectYandexDiskLibs.cmake  CopyCommonLibs.cmake
(+7 files in other folders)
